--- a/paper/scripts/timing_table_template.latex
+++ b/paper/scripts/timing_table_template.latex
@@ -1,11 +1,11 @@
 \begin{table}[ht]
 \centering
-\begin{tabular}{l c}
+\begin{tabular}{l${'c' * len(threads)}}
     % if len(threads) == 1:
     Program & Execution Time (Min-Max) \\\hline
     % else:
      & \multicolumn{${len(threads)}}{c}{Execution Time (Min-Max sec.)} \\\
-    Program & ${" & ".join(str(t) for t in threads)} \\\hline
+    Program & ${" & ".join("{} Threads".format(t) for t in threads)} \\\hline
     % endif
     % for row in rows[:-1]:
     ${" & ".join(str(r) for r in row)} \\\
