--- a/README
+++ b/README
@@ -8,7 +8,7 @@
 Atropos
 =======
 
-Atropos is tool for specific, sensitive, and speedy trimming of NGS reads. It is
+Atropos is a tool for specific, sensitive, and speedy trimming of NGS reads. It is
 a fork of the venerable `Cutadapt <https://github.com/marcelm/cutadapt>` read trimmer
 (`DOI:10.14806/ej.17.1.200 <http://dx.doi.org/10.14806/ej.17.1.200>`) with the primary
 improvements being:
