improve plotting scripts; remove names/captions from config

--- a/paper/workflow/bin/simulated_accuracy_table.tex
+++ b/paper/workflow/bin/simulated_accuracy_table.tex
@@ -46,6 +46,6 @@ for d in datasets:
         % endfor
     %endfor
 \end{tabular}
-\caption{Trimming accuracy on simulated data with three different base-call error rates. Wrongly trimmed: reads that do not contain adapters but were trimmed anyway; Over-trimmed: reads that contain adapters but from which too many bases were removed; Under-trimmed: reads that contain adapters but from which too few bases were removed. Both read-level and base-level error rates are shown. Fractions of total reads/bases are in parentheses. The best tool(s) in each category is highlighted.}\label{simulated-accuracy}
+\caption{\label{tab:${name}}${caption}}
 \end{table}
 
