fix last few bugs in workflow scripts

--- a/paper/workflow/bin/job_memory_table.tex
+++ b/paper/workflow/bin/job_memory_table.tex
@@ -10,7 +10,7 @@ for d in datasets:
 %>
 \begin{table}[ht]
 \centering
-\begin{tabular}{l${'r|r' * len(threads)}}
+\begin{tabular}{l${'r' * len(threads)}}
 \sisetup{detect-weight=true,detect-inline-weight=math}
     % if len(threads) == 1:
     Program & \multicolumn{1}{c}{Memory usage (Mb)} \\\hline
