reorganize paper directory

--- a/paper/manuscript/citations.bib
+++ b/paper/manuscript/citations.bib
@@ -309,3 +309,50 @@
 	keywords = {Annotation},
 	pages = {1760--1774}
 }
+
+
+@article{li_sequence_2009,
+	title = {The {Sequence} {Alignment}/{Map} format and {SAMtools}},
+	volume = {25},
+	issn = {1367-4803},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2723002/},
+	doi = {10.1093/bioinformatics/btp352},
+	abstract = {Summary: The Sequence Alignment/Map (SAM) format is a generic alignment format for storing read alignments against reference sequences, supporting short and long reads (up to 128 Mbp) produced by different sequencing platforms. It is flexible in style, compact in size, efficient in random access and is the format in which alignments from the 1000 Genomes Project are released. SAMtools implements various utilities for post-processing alignments in the SAM format, such as indexing, variant caller and alignment viewer, and thus provides universal tools for processing read alignments., Availability: http://samtools.sourceforge.net, Contact: rd@sanger.ac.uk},
+	number = {16},
+	journal = {Bioinformatics},
+	author = {Li, Heng and Handsaker, Bob and Wysoker, Alec and Fennell, Tim and Ruan, Jue and Homer, Nils and Marth, Gabor and Abecasis, Goncalo and Durbin, Richard},
+	month = aug,
+	year = {2009},
+	pmid = {19505943},
+	pmcid = {PMC2723002},
+	pages = {2078--2079}
+}
+
+@article{li_aligning_2013,
+	title = {Aligning sequence reads, clone sequences and assembly contigs with {BWA}-{MEM}},
+	url = {http://arxiv.org/abs/1303.3997},
+	abstract = {Summary: BWA-MEM is a new alignment algorithm for aligning sequence reads or long query sequences against a large reference genome such as human. It automatically chooses between local and end-to-end alignments, supports paired-end reads and performs chimeric alignment. The algorithm is robust to sequencing errors and applicable to a wide range of sequence lengths from 70bp to a few megabases. For mapping 100bp sequences, BWA-MEM shows better performance than several state-of-art read aligners to date. Availability and implementation: BWA-MEM is implemented as a component of BWA, which is available at http://github.com/lh3/bwa. Contact: hengli@broadinstitute.org},
+	urldate = {2016-08-26TZ},
+	journal = {arXiv:1303.3997 [q-bio]},
+	author = {Li, Heng},
+	month = mar,
+	year = {2013},
+	note = {arXiv: 1303.3997},
+	keywords = {Quantitative Biology - Genomics}
+}
+
+@article{neph_bedops:_2012,
+	title = {{BEDOPS}: high-performance genomic feature operations},
+	volume = {28},
+	issn = {1367-4803},
+	shorttitle = {{BEDOPS}},
+	url = {https://academic.oup.com/bioinformatics/article/28/14/1919/218826/BEDOPS-high-performance-genomic-feature-operations},
+	doi = {10.1093/bioinformatics/bts277},
+	number = {14},
+	urldate = {2017-07-10TZ},
+	journal = {Bioinformatics},
+	author = {Neph, Shane and Kuehn, M. Scott and Reynolds, Alex P. and Haugen, Eric and Thurman, Robert E. and Johnson, Audra K. and Rynes, Eric and Maurano, Matthew T. and Vierstra, Jeff and Thomas, Sean and Sandstrom, Richard and Humbert, Richard and Stamatoyannopoulos, John A.},
+	month = jul,
+	year = {2012},
+	pages = {1919--1920}
+}
